@@ -1,3 +1,4 @@
+* Add restore_history_before on ModelSQL
 * Remove img_{width,height} form attributes
 
 Version 3.4.0 - 2014-10-20
